--- a/fixDataset.ipynb
+++ b/fixDataset.ipynb
@@ -17,6 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import csv\n",
     "import os\n",
     "import numpy as np\n",
@@ -813,6 +816,56 @@
     "MinivisualiseringData['Region_of_Incident'].head(15\n",
     ")\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  read and fix data from null columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import csv\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Importing re to get number out from a stirng.\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  read and fix data from null columns \n",
+    "FixDataCSV = pd.read_csv(\"./MinivisualiseringData3.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FixDataCSV\n",
+    "dfresult = FixDataCSV.dropna( axis=0.0, how=\"any\",  subset=[\"Number_of_Survivors\"], inplace=False)\n",
+    "dfresult\n",
+    "# dfresult[\"Number_of_Survivors\"]\n",
+    "\n",
+    "dfresult.to_csv('./FixDataCSV.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -831,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
